# EDS-Simulation-

assignment/: README.md  pyproject.toml
assignment/sde_lab/: __init__.py  convergence.py  heston.py  models.py  schemes.py
assignment/tests/: test_convergence.py  test_heston.py  test_schemes.py
cours/: Ornstein-Uhlenbeck.docx
solution/: README.md  pyproject.toml
solution/examples/: demo.py
solution/sde_lab/: __init__.py  convergence.py  heston.py  models.py  schemes.py
solution/tests/: test_convergence.py  test_rates.py
