[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sde-lab-assignment"
version = "1.0.0"
description = "SDE simulation lab: Euler-Maruyama, Milstein, convergence, short-rate models, Heston"
requires-python = ">=3.9"
dependencies = ["numpy>=1.22"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["sde_lab*"]
